package games;

import games.players.Player;

public interface gamePlayer extends Player{

}
