package games;

import games.players.ListOfPlayers ;

public interface gamePlayerList extends ListOfPlayers {

}
