package main.java.games.ttt;
import main.java.games.ttt.Board;
import java.util.Random;

public class Piece{
    public Piece() {
    }
}