package games.ttt;
import games.gamePlayer;
public interface tttPlayer extends gamePlayer{

}
